🚀 3단계 - 로그인 구현하기 (#32)
* [fix] fileReader 분리, FileReousrce 추가, HttpBody 추가

* [fix] if {} 놓친 부분 수정

* [fix] HttpRequest, Response final하게 변경

* [feat] Location Header 추가

* [test] 로그인 기능 테스트

* [feat] 로그인 기능 추가

* [fix] output test로 ouput 관련 테스트 전부 이동

* [fix] MediaType file 패키지로 이동 및 enum

* [test] headers 테스트 추가

* [refactor] header 파싱을 위한 구조 변경

* [fix] mediatype 패키지 이동 반영

* [refactor] headername 추가

* [feat] HttpHeaders에서 body parse 추가 및 HttpFormBody 추가

* [feat] request에 headers, body 추가

* [fix] mediaType 패키지 이동 반영

* [refactor] 불필요 요소 제거

* [feat] content type이 없을 경우 body는 null

* [fix] mediatype enum -> class로 변경

* [fix] readline을 할 수 없으면 return

* [test] 로그인 POST로 변경

* [feat] HttpBody get value 추가 / Optional 사용 제거

* [fix] HttpRequest 잘못된 joining 수정

* [feat] login post & form body request 기반

* [refactor] test refactoring

* [refactor] HttpParams toString

* [refactor] HttpPath 구분을 requestLine에서

* [refactor] HttpFormBody toString

* [refactor] StubHttpRequest 개선

* [fix] 불필요 import 제거

* [test] Register test

* [feat] Register

* [fix] request body 읽어오지 못하는 이슈 해결 및 관련 코드 리팩토링

* [test] register test

* [refactor] requestHeader, responseHeader 분리

* [feat] cookie, setCookie는 cookie 목록으로 부여

* [feat] HttpSession, SessionManager

* [feat] Cookie header to HttpSession

* [feat] request parse session

* [feat] session save user info

* [feat] session을 불러올때 sessionManager에 있을때만 사용하도록 변경

* [refactor] loginHandler 불필요코드 제거

* [refactor] requestHeaderParser로 명칭 변경

* [refactor] 불필요 코드 정리

* [fix] request param 메소드 제거

* [fix] http request가 잘못되었을 경우 NotSupportHttpRequestException

* [refactor] 삼항연산자를 통한 parseParam 메소드 분리

* [refactor] 생성자가 여러개인 경우 다른 this 활용

* [refactor] addCookie -> cookie 메소드명 변경

* [refactor] hello world static으로 변경

* [refactor] handlers가 path match와 static file 경로로의 이동 역할을 가지도록 변경

* [refactor] sessionManager의 역할을 Http11Processor로 이동